[package]
name = "sync_bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde_json = "1.0.140"

[build-dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap_mangen = "0.2.26"
