[package]
name = "sync_bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

[build-dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap_mangen = "0.2.26"
clap_complete = "4.5.50"
